build: fix yarn errors upon `npm install minidump`
- Only run `git submodule update` when running out of a git working copy
- Don't require `yarn` for end-user installation

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "prepublishOnly": "shx chmod -R +x ./bin",
-    "preinstall": "yarn submodule && node build.js",
+    "preinstall": "node build.js",
     "submodule": "git submodule update --init --recursive",
     "test": "mocha test && standard"
   },
